**Update README and Build Configuration**
- Added detailed project information, including architecture, testing, and author/maintainer details.
- Updated PostgreSQL container configuration to use `postgres:postgres` credentials and the lightweight `postgres:17-alpine` image.
- Enhanced Native Image section with advanced optimizations and detailed build arguments.
- Upgraded project dependencies and configurations:
  - Spring Boot to `4.0.0-M3`.
  - JUnit to `6.0.0` with enforced dependency rules.
- Integrated Testcontainers to support PostgreSQL-based integration testing.
- Refined Gradle configurations for native and JVM builds, providing examples for both.
- Re-enabled Hibernate and CycloneDX BOM plugins with updated versions.

Enhanced documentation, improved build configuration, and optimized dependencies for better clarity and performance.